--- a/labHome.html
+++ b/labHome.html
@@ -8,11 +8,15 @@
 	<body>
 		<div class="login-form">
 			<h1>Lab Home</h1>
-            <form action="/poolMapping.html">
-                <input type="submit">
+            <form action="/testCollection">
+                <input type="submit" value="Test Collection">
             </form>
-				<button onclick="sendData()">Pool Mapping</button>
-				<button onclick="sendData()">Well testing</button>
+			<form action="/poolMapping">
+                <input type="submit" value="Pool Mapping">
+            </form>
+			<form action="/wellTesting">
+                <input type="submit" value="Well Testing">
+            </form>
 		</div>
     </body>
     <script>
