--- a/wellTesting.html
+++ b/wellTesting.html
@@ -6,8 +6,8 @@
 		<style></style>
 	</head>
 	<body>
-		<div class="poolMapping">
-			<h1>Pool Mapping</h1>
+		<div class="wellTesting">
+			<h1>Well Testing</h1>
 		</div>
     </body>
     <script>
