--- a/TestCollection.html
+++ b/TestCollection.html
@@ -6,8 +6,8 @@
 		<style></style>
 	</head>
 	<body>
-		<div class="poolMapping">
-			<h1>Pool Mapping</h1>
+		<div class="testCollection">
+			<h1>Test Collection</h1>
 		</div>
     </body>
     <script>
